fix(forms designer) fixed visibility of action configurator in readonly mode, implemented readonly model for the iconPicker

--- a/src/components/iconPicker/styles/index.less
+++ b/src/components/iconPicker/styles/index.less
@@ -1,6 +1,8 @@
 .sha-icon-picker {
   .sha-icon-picker-selected-icon {
-    cursor: pointer;
+    &:not(.sha-readonly){
+      cursor: pointer;
+    }
 
     .anticon {
       margin-right: @padding-lg;
